# SysNetMon

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  dashboard-check.yml  health-check.yml  native-build.yml
cpp/client/: main.cpp
cpp/include/: common.hpp  metrics.hpp  platform.hpp
cpp/server/: main.cpp
docker/: dashboard.Dockerfile  server.Dockerfile
python/dashboard/: app.py  requirements.txt  services.py
python/dashboard/static/: app.js
python/dashboard/templates/: index.html
scripts/: run-local.ps1  run-local.sh  stop-local.ps1  stop-local.sh
